--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,14 @@
 buildscript {
 	ext {
-		springBootVersion = '2.0.1.RELEASE'
+		springBootVersion = '2.1.0.BUILD-SNAPSHOT'
 	}
-	repositories {
+    repositories {
 		mavenCentral()
-	}
+		maven { url "https://repo.spring.io/snapshot" }
+		maven { url "https://repo.spring.io/milestone" }
+    }
 	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
 	}
 }
 
@@ -21,10 +23,16 @@ sourceCompatibility = 1.8
 
 repositories {
 	mavenCentral()
+	maven { url "https://repo.spring.io/snapshot" }
+	maven { url "https://repo.spring.io/milestone" }
 }
 
-
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter')
+    compile('org.springframework.boot:spring-boot-starter-web')
+    compile("org.apache.camel:camel-spring-boot-starter:2.17.0")
+	compile('org.springframework.boot:spring-boot-starter-data-jpa')
+	runtime('com.h2database:h2')
+	compileOnly('org.projectlombok:lombok')
+    compile("javax.xml.bind:jaxb-api:2.3.0")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
