--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,7 @@ apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
-group = 'uniritter.edu.br'
-version = '0.0.1-SNAPSHOT'
+group = 'br.edu.uniritter'
 sourceCompatibility = 1.8
 
 repositories {
@@ -28,6 +27,7 @@ repositories {
 }
 
 dependencies {
+	compile("org.springframework.boot:spring-boot-devtools")
     compile('org.springframework.boot:spring-boot-starter-web')
     compile("org.apache.camel:camel-spring-boot-starter:2.17.0")
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
