--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,11 @@ spring.datasource.password=
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# H2 Settings
+# H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/console
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
+
+# Devtools
+spring.devtools.remote.secret=nevergonnagiveyouup
