--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,12 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compile("org.apache.camel:camel-spring-boot-starter:2.17.0")
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
-	runtime('com.h2database:h2')
+	compile group: 'org.apache.camel', name: 'camel-rabbitmq', version: '2.19.2'
+    compile group: 'org.apache.camel', name: 'camel-gson', version: '2.10.4'
+    runtime('com.h2database:h2')
 	compileOnly('org.projectlombok:lombok')
     compile("javax.xml.bind:jaxb-api:2.3.0")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.1'
+
 }
