Add configuration properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.h2.console.settings.web-allow-others=false
 
 # Devtools
 spring.devtools.remote.secret=nevergonnagiveyouup
+
+income.connection=rabbitmq://user:pass@localhost/test?prefetchCount=1&threadPoolSize=1&exchangeType=fanout&skipExchangeDeclare=true
+outcome.connection=rabbitmq://user:pass@localhost/testout?threadPoolSize=1&exchangeType=fanout&skipExchangeDeclare=true&skipQueueDeclare=true
