--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,8 @@ spring.devtools.remote.secret=nevergonnagiveyouup
 
 income.connection=rabbitmq://user:pass@localhost/test?prefetchCount=1&threadPoolSize=1&exchangeType=fanout&skipExchangeDeclare=true
 outcome.connection=rabbitmq://user:pass@localhost/testout?threadPoolSize=1&exchangeType=fanout&skipExchangeDeclare=true&skipQueueDeclare=true
+
+#logging.level.root=WARN
+#logging.level.org.springframework.web=DEBUG
+#logging.level.org.hibernate=ERROR
+logging.level.br.edu.uniritter.monitors=DEBUG
