Add threshold rules

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,8 @@ spring.h2.console.settings.web-allow-others=false
 # Devtools
 spring.devtools.remote.secret=nevergonnagiveyouup
 
-income.connection=rabbitmq://user:pass@localhost/test?prefetchCount=1&threadPoolSize=1&exchangeType=fanout&skipExchangeDeclare=true
-outcome.connection=rabbitmq://user:pass@localhost/testout?threadPoolSize=1&exchangeType=fanout&skipExchangeDeclare=true&skipQueueDeclare=true
+income.connection=rabbitmq://localhost/test?username=admin&password=admin&prefetchCount=1&threadPoolSize=1&exchangeType=fanout&skipExchangeDeclare=true
+outcome.connection=rabbitmq://localhost/testout?username=admin&password=admin&threadPoolSize=1&exchangeType=fanout&skipExchangeDeclare=true&skipQueueDeclare=true
 
 #logging.level.root=WARN
 #logging.level.org.springframework.web=DEBUG
