--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compile("org.apache.camel:camel-spring-boot-starter:2.17.0")
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile("org.springframework:spring-jdbc")
     compile group: 'org.apache.camel', name: 'camel-rabbitmq', version: '2.19.2'
     compile group: 'org.apache.camel', name: 'camel-gson', version: '2.10.4'
     runtime('com.h2database:h2')
