--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     runtime('com.h2database:h2')
     compileOnly('org.projectlombok:lombok')
     compile("javax.xml.bind:jaxb-api:2.3.0")
+    // https://mvnrepository.com/artifact/com.google.guava/guava
+    compile group: 'com.google.guava', name: 'guava', version: '11.0.2'
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.1'
 }
