Add parsers and serializers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,5 @@ outcome.connection=rabbitmq://eagle.rmq.cloudamqp.com/a2?username=hishlufx&passw
 #logging.level.org.springframework.web=DEBUG
 #logging.level.org.hibernate=ERROR
 logging.level.br.edu.uniritter.monitors=DEBUG
+
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
