--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     ext {
         springBootVersion = '2.1.0.BUILD-SNAPSHOT'
+        camelDependenciesVersion = '2.17.0'
     }
     repositories {
         mavenCentral()
@@ -29,15 +30,15 @@ repositories {
 dependencies {
     compile("org.springframework.boot:spring-boot-devtools")
     compile('org.springframework.boot:spring-boot-starter-web')
-    compile("org.apache.camel:camel-spring-boot-starter:2.17.0")
+    compile("org.apache.camel:camel-spring-boot-starter:${camelDependenciesVersion}")
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile("org.springframework:spring-jdbc")
-    compile group: 'org.apache.camel', name: 'camel-rabbitmq', version: '2.19.2'
-    compile group: 'org.apache.camel', name: 'camel-gson', version: '2.10.4'
+    compile group: 'org.apache.camel', name: 'camel-rabbitmq', version: camelDependenciesVersion
+    compile group: 'org.apache.camel', name: 'camel-gson', version: camelDependenciesVersion
+    compile group: 'org.apache.camel', name: 'camel-jackson', version: camelDependenciesVersion
     runtime('com.h2database:h2')
     compileOnly('org.projectlombok:lombok')
     compile("javax.xml.bind:jaxb-api:2.3.0")
-    // https://mvnrepository.com/artifact/com.google.guava/guava
     compile group: 'com.google.guava', name: 'guava', version: '11.0.2'
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.1'
