--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '2.1.0.BUILD-SNAPSHOT'
+        springBootVersion = '2.0.3.RELEASE'
         camelDependenciesVersion = '2.17.0'
     }
     repositories {
