--- a/build.gradle
+++ b/build.gradle
@@ -38,9 +38,11 @@ dependencies {
     compile("org.apache.camel:camel-spring-boot-starter:${camelDependenciesVersion}")
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile("org.springframework:spring-jdbc")
+    compile group: 'org.apache.camel', name: 'camel-amqp', version: camelDependenciesVersion
     compile group: 'org.apache.camel', name: 'camel-rabbitmq', version: camelDependenciesVersion
     compile group: 'org.apache.camel', name: 'camel-gson', version: camelDependenciesVersion
     compile group: 'org.apache.camel', name: 'camel-jackson', version: camelDependenciesVersion
+    compile group: 'io.github.cdimascio', name: 'java-dotenv', version: '3.1.1'
     runtime('com.h2database:h2')
     compileOnly('org.projectlombok:lombok')
     compile("javax.xml.bind:jaxb-api:2.3.0")
