--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,11 +19,13 @@ spring.h2.console.settings.web-allow-others=false
 spring.devtools.remote.secret=nevergonnagiveyouup
 
 #amqp://hishlufx:bh2lHB44BZxPJ3zY_QwiAECyEFCLFh6f@eagle.rmq.cloudamqp.com/hishlufx
-income.connection=rabbitmq://localhost/a1?username=admin&password=admin&prefetchCount=1&threadPoolSize=1&exchangeType=topic&queue=a1
+#income.connection=rabbitmq://localhost/a1?username=admin&password=admin&prefetchCount=1&threadPoolSize=1&exchangeType=topic&queue=a1
 #income.connection=rabbitmq://eagle.rmq.cloudamqp.com/test?username=hishlufx&password=bh2lHB44BZxPJ3zY_QwiAECyEFCLFh6f&prefetchCount=1&threadPoolSize=1
-outcome.connection=rabbitmq://localhost/a2?username=admin&password=admin&threadPoolSize=1&exchangeType=topic&queue=a2
+#outcome.connection=rabbitmq://localhost/a2?username=admin&password=admin&threadPoolSize=1&exchangeType=topic&queue=a2
 #outcome.connection=rabbitmq://eagle.rmq.cloudamqp.com/a2?username=hishlufx&password=bh2lHB44BZxPJ3zY_QwiAECyEFCLFh6f&threadPoolSize=1&exchangeType=topic&queue=a2
 #outcome.connection=rabbitmq://eagle.rmq.cloudamqp.com/a2?username=hishlufx&password=bh2lHB44BZxPJ3zY_QwiAECyEFCLFh6f&threadPoolSize=1&exchangeType=topic&skipExchangeDeclare=true
+income.connection=amqp:queue:a-metrics-monitor
+outcome.connection=amqp:queue:a-monitors-monitor
 
 #logging.level.root=WARN
 #logging.level.org.springframework.web=DEBUG
