Add default threshold

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,6 +41,8 @@ income:
 outcome:
   connection: amqp:queue:a-monitor-alerts
 
+default-threshold: 5000 # milliseconds
+
 ---
 spring:
   profiles: heroku
