--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     compileOnly('org.projectlombok:lombok')
     compile("javax.xml.bind:jaxb-api:2.3.0")
     testCompile 'junit:junit:4.12'
+    testCompile group: 'io.github.benas', name: 'random-beans', version: '3.7.0'
     testCompile 'org.springframework.boot:spring-boot-starter-test'
     testCompile group: 'org.slf4j', name: 'slf4j-simple', version: '1.8.0-beta2'
     testCompile group: 'pl.pojo',  name: 'pojo-tester', version: '0.7.6'
